tests/NormalTests/paczka1/fuzzy1/68415471.err
Error in line 13: S193 S193 17,9
Error in line 20: YIs S193 73,6
Error in line 25: S193 A970 88,8
